--- a/src/resource/url-display.fxml
+++ b/src/resource/url-display.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.web.WebView?>
 
@@ -14,5 +15,6 @@
       <Button fx:id="stopBtn" layoutX="1076.0" layoutY="115.0" mnemonicParsing="false" onAction="#handleStopAction" prefHeight="25.0" prefWidth="93.0" text="Stop" />
       <WebView fx:id="webView" layoutX="647.0" layoutY="427.0" prefHeight="379.0" prefWidth="553.0" />
       <TextArea fx:id="textAreaDisplay" layoutX="655.0" layoutY="115.0" prefHeight="200.0" prefWidth="200.0" />
+      <ImageView fx:id="imageView" fitHeight="150.0" fitWidth="200.0" layoutX="901.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
