Initial Client/Server application

--- a/src/resource/main-panel.fxml
+++ b/src/resource/main-panel.fxml
@@ -6,15 +6,15 @@
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="564.0" prefWidth="968.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
   <tabs>
-    <Tab id="redirectToRegistration" fx:id="tab1" text="Registration">
+    <Tab id="redirectToRegistration" fx:id="tab1" inpText="Registration">
          <content>
             <AnchorPane fx:id="anch1" prefHeight="513.0" prefWidth="968.0" />
          </content></Tab>
-    <Tab fx:id="tab2" text="Information">
+    <Tab fx:id="tab2" inpText="Information">
          <content>
             <AnchorPane fx:id="anch2" prefHeight="200.0" prefWidth="200.0" />
          </content></Tab>
-      <Tab fx:id="tab3" text="Media">
+      <Tab fx:id="tab3" inpText="Media">
         <content>
           <AnchorPane fx:id="anch3" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
         </content>
